--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,66 @@
-/* 
-    General Styles used on every website (Don't Repeat Yourself)
-*/
+.Logo{
+    width: 80px;
+}
+
+.btn {
+    padding: 5px 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    border: 0;
+    background-color: #FF6347;
+    color:#8d0000;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 500;
+    transition: all 0.2s ease;
+  }
+  
+  .btn:hover {
+    letter-spacing: 2px;
+    background-color: white;
+    color: #8d0000;
+    box-shadow: #FF6347 0px 7px 29px 0px;
+  }
+  
+  .btn:active {
+    letter-spacing: 2px;
+    background-color: white;
+    color: #8d0000;
+    box-shadow: #FF6347;
+    transform: translateY(5px);
+  }
+
+  .input{
+    padding-top: 3px;
+  }
+
+  .alert-bg{
+    padding: 20px;
+    background-color: #F7F7F7;
+    border-color: #ededed;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 3px;
+  }
+
+  .navbar{
+    background-color: #F7F7F7;
+  }
+
+  .sidebar-space{
+    background-color: #c4c4c4;
+
+  }
+
+  .footer{
+    background-color: #F7F7F7;
+    padding: 10px 30px 0px 30px;
+  }
+
+  .footer-logo{
+    width: 50px;
+  }
+
+  .img-drawing{
+    width: 300px;
+  }
