--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -1,5 +1,5 @@
 .modal {
-    display: block; /* Ensure the modal is displayed */
+    display: block;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -12,11 +12,14 @@
 }
 
 .modal-content {
-    background-color: #fefefe;
     margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
     width: 80%;
+    padding: 20px;
+    background-color: #F7F7F7;
+    border-color: red;
+    border-radius: 10px;
+    border-style:solid;
+    border-width: 3px;
 }
 
 .close {
@@ -32,3 +35,31 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+.btn {
+    padding: 5px 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    border: 0;
+    background-color: #FF6347;
+    color:#8d0000;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 500;
+    transition: all 0.2s ease;
+  }
+  
+  .btn:hover {
+    letter-spacing: 2px;
+    background-color: white;
+    color: #8d0000;
+    box-shadow: #FF6347 0px 7px 29px 0px;
+  }
+  
+  .btn:active {
+    letter-spacing: 2px;
+    background-color: white;
+    color: #8d0000;
+    box-shadow: #FF6347;
+    transform: translateY(5px);
+  }
