--- a/src/front/styles/giftList.css
+++ b/src/front/styles/giftList.css
@@ -16,3 +16,19 @@
 .card {
     width: 80%;
 }
+
+.image-container {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.circle-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+Links {
+    flex-direction: column;
+}
