--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -3,32 +3,32 @@
 }
 
 .btn {
-    padding: 5px 20px;
-    border-radius: 50px;
-    cursor: pointer;
-    border: 0;
-    background-color: #FF6347;
-    color:#8d0000;
-    text-transform: uppercase;
-    font-size: 15px;
-    font-weight: 500;
-    transition: all 0.2s ease;
-  }
-  
-  .btn:hover {
-    letter-spacing: 2px;
-    background-color: white;
-    color: #8d0000;
-    box-shadow: #FF6347 0px 7px 29px 0px;
-  }
-  
-  .btn:active {
-    letter-spacing: 2px;
-    background-color: white;
-    color: #8d0000;
-    box-shadow: #FF6347;
-    transform: translateY(5px);
-  }
+  padding: 5px 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  background-color: #FA634D;
+  color:white;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: 500;
+  /* transition: all 0.2s ease; */
+}
+
+.btn:hover {
+  /* letter-spacing: 2px; */
+  background-color: white;
+  border: 2px solid #FA634D ;
+  color: #8d0000;
+  /* box-shadow: #FF6347 0px 7px 29px 0px; */
+}
+
+/* .btn:active {
+  letter-spacing: 2px;
+  background-color: white;
+  color: white;
+  box-shadow: #FA634D ;
+  transform: translateY(5px);
+} */
 
   .input{
     padding-top: 3px;
@@ -55,6 +55,9 @@
   .footer{
     background-color: #F7F7F7;
     padding: 10px 30px 0px 30px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
   }
 
   .footer-logo{
@@ -64,3 +67,9 @@
   .img-drawing{
     width: 300px;
   }
+
+  body {
+    position: relative;
+    min-height: 100vh;
+}
+
