--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,5 +1,14 @@
-.Logo{
-    width: 80px;
+* {
+  font-weight: 400;
+}
+
+body {
+  position: relative;
+  min-height: 100vh;
+}
+
+.Logo {
+  width: 80px;
 }
 
 .btn {
@@ -7,18 +16,18 @@
   border-radius: 50px;
   cursor: pointer;
   background-color: #FA634D;
-  color:white;
+  color: white;
+  font-weight: 400;
   text-transform: uppercase;
-  font-size: 15px;
-  font-weight: 500;
+  /* font-size: 15px;*/
   /* transition: all 0.2s ease; */
 }
 
 .btn:hover {
   /* letter-spacing: 2px; */
-  background-color: white;
-  border: 2px solid #FA634D ;
-  color: #8d0000;
+  background-color: #741b0d;
+  color: white;
+  border: 2px solid #741b0d;
   /* box-shadow: #FF6347 0px 7px 29px 0px; */
 }
 
@@ -30,46 +39,40 @@
   transform: translateY(5px);
 } */
 
-  .input{
-    padding-top: 3px;
-  }
-
-  .alert-bg{
-    padding: 20px;
-    background-color: #F7F7F7;
-    border-color: #ededed;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 3px;
-  }
-
-  .navbar{
-    background-color: #F7F7F7;
-  }
-
-  .sidebar-space{
-    background-color: #c4c4c4;
-
-  }
-
-  .footer{
-    background-color: #F7F7F7;
-    padding: 10px 30px 0px 30px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-
-  .footer-logo{
-    width: 50px;
-  }
-
-  .img-drawing{
-    width: 300px;
-  }
-
-  body {
-    position: relative;
-    min-height: 100vh;
+.input {
+  padding-top: 3px;
 }
 
+.alert-bg {
+  padding: 20px;
+  background-color: #F7F7F7;
+  border-color: #ededed;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 3px;
+}
+
+.navbar {
+  background-color: #F7F7F7;
+}
+
+.sidebar-space {
+  background-color: #c4c4c4;
+
+}
+
+.footer {
+  background-color: #F7F7F7;
+  padding: 10px 30px 0px 30px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-logo {
+  width: 50px;
+}
+
+.img-drawing {
+  width: 300px;
+}
