--- a/src/front/styles/giftList.css
+++ b/src/front/styles/giftList.css
@@ -42,7 +42,7 @@
     width: 70%;
     background-color: darkgray;
     /* border: 2px solid #ff6347; */
-    color: white;
+    color: black;
     margin: 4px;
     border-radius: 20px;
     text-decoration: none;
