--- a/src/front/styles/signup.css
+++ b/src/front/styles/signup.css
@@ -1,6 +1,6 @@
 .image-container {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     overflow: hidden;
     border-radius: 50%;
 }
@@ -9,5 +9,9 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-
 }
+
+.input {
+    padding-top: 3px;
+    border-radius: 50px;
+  }
