--- a/src/front/styles/listHeader.css
+++ b/src/front/styles/listHeader.css
@@ -3,6 +3,9 @@
     border: 2px solid #FA634D;
     font-weight: 400;
     color: #741b0d;
+    cursor: default !important;
+    border-radius: 50px;
+    padding: 5px 20px;
 }
 
 /* #buttonHeader:hover {
