console.log reviewed and deleted, added a loading animation on signup and renderGift pending some issues, goback on profile added, giftform issues with short links fixed, some changes on list dropdown to discuss with Sabri

--- a/src/front/styles/signup.css
+++ b/src/front/styles/signup.css
@@ -26,3 +26,17 @@
     text-align: center;
 }
 
+.fa-arrow-right {
+    color: #FA634D !important
+}
+
+@media screen and (max-width: 800px) {
+    .alert-bg {
+        flex-direction: column;
+    }
+
+    .firstStep,
+    .formSignup {
+        width: auto;
+    }
+}
