patterns ready, sidebar ready, loading message ready

--- a/src/front/styles/renderGifts.css
+++ b/src/front/styles/renderGifts.css
@@ -5,6 +5,7 @@
 }
 
 .rowCardGift {
+
     max-height: calc(100vh - 270px);
     overflow-y: scroll;
 }
@@ -15,4 +16,14 @@
 
 #fa-close {
     color: black !important;
+    cursor: pointer;
+}
+
+.loadingMessage {
+    font-size: 40px;
+    font-weight: 500;
+}
+
+.loadingMessage i {
+    font-size: 50px;
 }
