--- a/src/front/styles/giftList.css
+++ b/src/front/styles/giftList.css
@@ -11,6 +11,7 @@
 
 #giftRow {
     max-height: 700px;
+    width: 100%;
 }
 
 .card {
@@ -34,12 +35,13 @@
     display: flex;
     flex-direction: column;
     margin-left: 45px;
+    align-items: center;
 }
 
 .sideBarLinks a {
     padding: 5px 20px;
     text-align: center;
-    width: 70%;
+    width: 80%;
     background-color: darkgray;
     /* border: 2px solid #ff6347; */
     color: black;
@@ -50,5 +52,35 @@
 
 .sideBar {
     height: calc(100vh - (100px));
-    overflow-y: auto;
+    padding-right: 0;
+    padding-bottom: 10px;
+}
+
+.welcoming {
+    width: 100%;
+}
+
+.top-welcoming {
+    width: 100%;
+}
+
+@media screen and (max-width: 1070px) {
+    .top-welcoming {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .sideBarLinks {
+        display: flex;
+        flex-direction: column;
+        margin-left: 25px;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 570px) {
+    .sideBar {
+        height: fit-content;
+        padding-bottom: 15px;
+    }
 }
