--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -5,6 +5,15 @@
 body {
   position: relative;
   min-height: 100vh;
+  font-family: "Truculenta", sans-serif;
+}
+
+.truculenta-fontGift {
+  font-family: "Truculenta", sans-serif;
+  font-optical-sizing: none;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
 }
 
 .Logo {
@@ -17,7 +26,7 @@ body {
   cursor: pointer;
   background-color: #FA634D;
   color: white;
-  font-weight: 400;
+  font-weight: 500;
   text-transform: uppercase;
   /* font-size: 15px;*/
   /* transition: all 0.2s ease; */
