--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -28,25 +28,15 @@ body {
   color: white;
   font-weight: 500;
   text-transform: uppercase;
-  /* font-size: 15px;*/
-  /* transition: all 0.2s ease; */
+
 }
 
 .btn:hover {
-  /* letter-spacing: 2px; */
-  background-color: #741b0d;
+  background-color: #de4a34;
   color: white;
-  border: 2px solid #741b0d;
-  /* box-shadow: #FF6347 0px 7px 29px 0px; */
+  border: 2px solid #de4a34;
+  font-weight: 500;
 }
-
-/* .btn:active {
-  letter-spacing: 2px;
-  background-color: white;
-  color: white;
-  box-shadow: #FA634D ;
-  transform: translateY(5px);
-} */
 
 .input {
   padding-top: 3px;
@@ -64,28 +54,31 @@ body {
 
 .navbar {
   background-color: #F7F7F7;
+  box-shadow: 0 2px 7px 0 #00000033;
 }
 
 .sidebar-space {
   background-color: #c4c4c4;
-
 }
 
 .footer {
   background-color: #F7F7F7;
-  padding: 10px 30px 0px 30px;
+  padding: 5px;
   position: fixed;
   bottom: 0;
   width: 100%;
 }
 
 .footer-logo {
-  width: 50px;
+  width: 40px;
 }
 
-.img-drawing {
-  width: 300px;
+.footer-text {
+  margin: auto;
+  width: 50%;
 }
+
+
 
 .fa-solid {
   color: #FA634D;
