--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -3,3 +3,8 @@
     color: #741b0d;
     background: none;
 }
+
+.navbar {
+    background-color: #F7F7F7;
+    box-shadow: 0 2px 7px 0 #00000033;
+  }
