input design fixed

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -46,10 +46,10 @@ body {
   font-weight: 500;
 }
 
-.input {
+/* .input {
   padding-top: 3px;
   border-radius: 50px;
-}
+} */
 
 .alert-bg {
   padding: 20px;
