--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -7,6 +7,11 @@
     width: 60%;
 }
 
+.data-input {
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem
+}
+
 @media screen and (max-width: 570px) {
     .form-box {
         width: 100%;
