--- a/src/front/styles/giftList.css
+++ b/src/front/styles/giftList.css
@@ -16,6 +16,9 @@
 
 .card {
     width: 80%;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px #c5c5c5;
+    margin: 10px;
 }
 
 .image-container {
@@ -42,8 +45,7 @@
     padding: 5px 20px;
     text-align: center;
     width: 80%;
-    background-color: darkgray;
-    /* border: 2px solid #ff6347; */
+    background-color: rgb(197, 197, 197);
     color: black;
     margin: 4px;
     border-radius: 20px;
