--- a/src/front/styles/renderGifts.css
+++ b/src/front/styles/renderGifts.css
@@ -4,9 +4,18 @@
     cursor: pointer;
 }
 
+.list-group-item {
+    border: none;
+    padding: 1dvh;
+}
+
 .rowCardGift {
     max-height: calc(100vh - 270px);
     overflow-y: scroll;
+}
+
+.card-footer {
+    margin: 5px;
 }
 
 .rowCardGift::-webkit-scrollbar {
@@ -25,4 +34,21 @@
 
 .loadingMessage i {
     font-size: 50px;
+}
+
+.gift-col {
+    width: 50%;
+    padding: 0px;
+    display: grid;
+    justify-items: center;
+}
+
+@media screen and (max-width: 570px) {
+    .gift-col {
+        display: grid;
+        justify-items: center;
+        align-content: space-evenly;
+        width: 100%;
+        justify-content: center;
+    }
 }
