--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -24,6 +24,7 @@ body {
   color: #FA634D;
 }
 
+
 .fa-shuffle {
   color: white;
 }
@@ -44,6 +45,9 @@ body {
   color: white;
   border: 2px solid #de4a34;
   font-weight: 500;
+  .fa-solid{
+    color: white;
+  } 
 }
 
 /* .input {
