--- a/src/front/styles/listHeader.css
+++ b/src/front/styles/listHeader.css
@@ -7,3 +7,31 @@
     border-radius: 50px;
     padding: 5px 20px;
 }
+
+.header-modal-content {
+    margin: 15% auto;
+    width: 80%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    background-color: #F7F7F7;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #c4c4c4;
+}
+
+.close {
+    color: black !important;
+    cursor: pointer;
+}
+
+#fa-close-m {
+    color: black !important;
+    cursor: pointer;
+}
+
+.share-url {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
