--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -24,9 +24,14 @@ body {
   color: #FA634D;
 }
 
-
 .fa-shuffle {
   color: white;
+}
+
+.fa-eye {
+  cursor: pointer;
+  align-self: center;
+  padding-left: 5px;
 }
 
 .btn {
@@ -45,9 +50,10 @@ body {
   color: white;
   border: 2px solid #de4a34;
   font-weight: 500;
-  .fa-solid{
+
+  .fa-solid {
     color: white;
-  } 
+  }
 }
 
 .alert-bg {
